be_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: tranhng05821/k8sbiglab:v2
        ports:
        - containerPort: 8080
